[tool.poetry]
name = "where_is_my_pet"
version = "0.1.0"
description = ""
authors = ["Maksimyuk <georgiy.maksimyuk@flatstack.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
SQLAlchemy = "^2.0.7"
alembic = "^1.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
